objects/BMCServiceDesk__BMC_BusinessService__c.object
<CustomObject>
    <description>BMC_BusinessService. CMDB Class that stores information about business or technical services. A business service can be provided from one business to another, or from one organization to another within a business (for example, customer support, order processing, and payroll).  A technical service can be provided by an IT organization to support business services or IT&apos;s own operations (for example, employee provisioning, backup and recovery, and self-service help desk). It can also represent a service offering (captured by a certain type of infrastructure) and the Service Level Targets associated with that service (for example, Web farms or storage).  This class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__Asset__c</fullName>
        <formula>BMCServiceDesk__FKBMC_BaseElement__r.BMCServiceDesk__CITag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Base_Customer_Price__c</fullName>
        <label>Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Base_Delivery_Cost__c</fullName>
        <label>Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Class_Name__c</fullName>
        <formula>BMCServiceDesk__FKBMC_BaseElement__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostDescription__c</fullName>
        <label>Cost Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption1__c</fullName>
        <label>Cost Option1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Adapter</fullName>
                </value>
                <value>
                    <fullName>Installed Server</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Concurrent user</fullName>
                </value>
                <value>
                    <fullName>CPU</fullName>
                </value>
                <value>
                    <fullName>Storage in GB</fullName>
                </value>
                <value>
                    <fullName>Storage in TB</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption2__c</fullName>
        <label>Cost Option2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <formula>BMCServiceDesk__FKBMC_BaseElement__r.BMCServiceDesk__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBMC_BaseElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Element</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Business Services</relationshipLabel>
        <relationshipName>Business_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Service of</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Business Services</relationshipLabel>
        <relationshipName>Business_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>InstanceID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_Name__c</fullName>
        <formula>BMCServiceDesk__FKBMC_BaseElement__r.BMCServiceDesk__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Owner__c</fullName>
        <formula>BMCServiceDesk__Service_Owner__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Parent_Service__c</fullName>
        <formula>BMCServiceDesk__FKBusinessService__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PriceOption1__c</fullName>
        <label>Price Option1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Adapter</fullName>
                </value>
                <value>
                    <fullName>Installed Server</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Concurrent user</fullName>
                </value>
                <value>
                    <fullName>CPU</fullName>
                </value>
                <value>
                    <fullName>Storage in GB</fullName>
                </value>
                <value>
                    <fullName>Storage in TB</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PriceOption2__c</fullName>
        <label>Price Option2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceType__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>BusinessService</fullName>
                </value>
                <value>
                    <fullName>TechnicalService</fullName>
                </value>
                <value>
                    <fullName>Offering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Services</relationshipLabel>
        <relationshipName>Business_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Review_Date__c</fullName>
        <label>Service Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Business_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Site__c</fullName>
        <formula>BMCServiceDesk__FKBMC_BaseElement__r.BMCServiceDesk__Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Defined</fullName>
                </value>
                <value>
                    <fullName>Analyzed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Chartered</fullName>
                </value>
                <value>
                    <fullName>Designed</fullName>
                </value>
                <value>
                    <fullName>Developed</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Tested</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Unpublished</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Services (Vendor)</relationshipLabel>
        <relationshipName>Business_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Service</label>
    <nameField>
        <label>BMC_BusinessService Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Start_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>BMCServiceDesk__Start_Date__c  &gt;  BMCServiceDesk__End_Date__c</errorConditionFormula>
        <errorMessage>Start date should be lesser than End date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Validate_Parent_service_for_an_offering</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(BMCServiceDesk__ServiceType__c, &apos;Offering&apos;)  &amp;&amp;   ISBLANK(BMCServiceDesk__FKBusinessService__c)</errorConditionFormula>
        <errorMessage>Please enter the parent service in the Sub-Service of field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Validate_Subservice_of</fullName>
        <active>true</active>
        <errorConditionFormula>Not(ISBLANK( BMCServiceDesk__FKBusinessService__c )) &amp;&amp; UPPER(BMCServiceDesk__FKBusinessService__r.BMCServiceDesk__Class__c) != &apos;BMC_BUSINESSSERVICE&apos;</errorConditionFormula>
        <errorMessage>The Sub-Service of attribute can only be populated with a Business Service Instance.</errorMessage>
    </validationRules>
</CustomObject>